--- a/ProyectoCodigoLimpio/Properties/Resources.resx
+++ b/ProyectoCodigoLimpio/Properties/Resources.resx
@@ -127,4 +127,7 @@
   <data name="send" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\send.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="logo_size" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\logo_size.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
